--- a/HackatonCode8.API/appsettings.json
+++ b/HackatonCode8.API/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "defaultConnectionString": "Server=localhost,1433;uid=sa;pwd=Password123!;database=hackatonDb1;TrustServerCertificate=true;"
+    "defaultConnectionString": "Server=localhost,1433;uid=sa;pwd=Password123!;database=hackatonDb1;TrustServerCertificate=true;",
+    "def": "Data Source=(LocalDB)\\MSSQLLocalDB;Initial Catalog=hac1;Integrated Security=True;TrustServerCertificate=True"
   },
   "Token": {
     "SecurityKey": "f41cd4f2-525f-42d0-a815-8e6cdda06b00",
